k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-backend-svc
  namespace: default
spec:
  selector:
    app: nexus-backend
    color: blue        # Jenkins가 배포 시 blue/green으로 전환
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
